SmartGrid_Project_Devops/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartgrid
  labels:
    name: smartgrid
    environment: production
